--- a/pom.xml
+++ b/pom.xml
@@ -84,6 +84,12 @@
             <version>5.4.0</version>
             <scope>test</scope>
         </dependency>
+        <dependency>
+            <groupId>org.apache.struts</groupId>
+            <artifactId>struts-core</artifactId>
+            <version>1.3.8</version>
+            <scope>test</scope>
+        </dependency>
 
 
     </dependencies>
